--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@types/node": "^20.17.28",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "postcss": "^8.5.3",
+    "postcss": "8.4.35",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "3.4.1",
     "typescript": "^5"
   }
 }
