--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
@@ -25,10 +26,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.17.28",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "10.4.19",
-    "eslint": "^9",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.2.4",
     "postcss": "8.4.35",
     "prettier": "^3.5.3",
